# recruiting_visualizer

./: .gitignore  README.md  pyproject.toml  spec.md
backend/: __init__.py  app.py  database.py  models.py  routes.py  services.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
tests/: __init__.py  conftest.py  test_api.py
